# Robotica

./: README.md
denso_robot_ros2/denso_isaacsim/: CMakeLists.txt  package.xml
denso_robot_ros2/denso_isaacsim/launch/: isaac_moveit.launch.py
denso_robot_ros2/denso_isaacsim/maps/: denso.usd
denso_robot_ros2/denso_isaacsim/rviz2/: panda_moveit_config.rviz
denso_robot_ros2/denso_robot_bringup/config/: denso_robot_controllers.yaml
denso_robot_ros2/denso_robot_bringup/launch/: denso_robot_bringup.launch.py
denso_robot_ros2/denso_robot_description/config/: initial_positions.yaml
denso_robot_ros2/denso_robot_description/urdf/: denso_robot.urdf.xacro
denso_robot_ros2/denso_robot_moveit_config/config/: controllers.yaml  denso_robot_servo.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
denso_robot_ros2/denso_robot_moveit_config/launch/: denso_robot_moveit.launch.py
denso_robot_ros2/denso_robot_moveit_config/srdf/: denso_robot_macro.srdf.xacro
denso_robot_ros2/isaacsim/: CMakeLists.txt  package.xml
denso_robot_ros2/isaacsim/scripts/: run_isaacsim.py
isaacsim/: CMakeLists.txt  package.xml
isaacsim/launch/: run_isaacsim.launch.py
isaacsim_moveit/: CMakeLists.txt  package.xml
isaacsim_moveit/launch/: launch_isaac_sim.launch.py  panda_robot_moveit.launch.py  welding.launch.py
isaacsim_moveit/maps/: denso.usd  denso_welding.usd  denso_welding_multiple_objects.usd  denso_welding_with_circular_conveyor_belt.usd  denso_welding_with_conveyor_belt.usd  denso_with_conveyor_belt.usd
isaacsim_moveit/maps/Collected_mobile_manipulation_with_panda_hand/: .collect.mapping.json
isaacsim_moveit/maps/Collected_simple_mobile_manipulation_with_suction_gripper/: .collect.mapping.json
isaacsim_moveit/rviz/: moveit.rviz
isaacsim_moveit/src/: synchronize_isaac_sim_labels.cpp
object_manipulation_interfaces/: CMakeLists.txt  package.xml
object_manipulation_interfaces/srv/: EvaluateReward.srv  GoalReached.srv  PickedObject.srv
welding_package/: CMakeLists.txt  Doxyfile  package.xml
welding_package/config/: Poses.yaml  labels.yaml  multiple_poses.yaml  multiple_poses_with_trajectory.yaml
welding_package/docs_output/html/: add__collision__objects_8cpp.html  add__collision__objects_8cpp__incl.map  add__collision__objects_8cpp__incl.md5  annotated.html  classAddCollision-members.html  classAddCollision.html  classAddCollision__coll__graph.map  classAddCollision__coll__graph.md5  classBasicWelding-members.html  classBasicWelding.html  classBasicWelding__coll__graph.map  classBasicWelding__inherit__graph.md5  classWelding-members.html  classWelding.html  classWeldingWithCircularConveyorBelt-members.html  classWeldingWithCircularConveyorBelt.html  classWeldingWithCircularConveyorBelt__coll__graph.md5  classWeldingWithTrajectory.html  (+63 more)
welding_package/launch/: denso_robot_moveit.launch.py  denso_welding_multiple_objects.launch.py  denso_welding_with_circular_conveyor_belt.launch.py  denso_welding_with_trajectory.launch.py
welding_package/src/: add_collision_objects.cpp  welding.cpp  welding_multiple_objects.cpp  welding_with_circular_conveyor_belt.cpp  welding_with_trajectory.cpp
(+69 files in other folders)
